--- a/.github/workflows/format-and-lint.yml
+++ b/.github/workflows/format-and-lint.yml
@@ -15,14 +15,11 @@ jobs:
         with:
           python-version-file: .python-version
 
-      - name: Install and configure Poetry
-        run: |
-          pipx install poetry
-          poetry config virtualenvs.in-project true
+      - name: Install uv
+        run: pipx install uv
 
       - name: Install dependencies
-        run: |
-          poetry install --no-root
+        run: uv sync --only-group dev
 
       - name: Run Linters
-        run: make lint
+        run: uv run make lint
