--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,42 +1,50 @@
-[tool.poetry]
-name = "django-project-template"
+[project]
+name = "dj-site-tmpl"
 version = "0.1.0"
 description = "A comprehensive Django project template."
-authors = ["Gist Author <author@example.com>"]
+authors = [{ name = "akitorahayashi", email = "atora.has75@gmail.com" }]
 readme = "README.md"
-packages = [{ include = "apps" }]
+requires-python = ">=3.12,<4.0"
+dependencies = [
+    "django>=5.2.5,<6.0.0",
+    "python-dotenv>=1.1.1,<2.0.0",
+    "gunicorn>=22.0.0,<23.0.0",
+]
 
-[tool.poetry.dependencies]
-python = ">=3.12,<4.0"
-django = ">=5.2.5,<6.0.0"
-python-dotenv = ">=1.1.1,<2.0.0"
-gunicorn = ">=22.0.0,<23.0.0"
+[dependency-groups]
+dev = [
+    "black>=25.1.0",
+    "ruff>=0.12.9",
+    "ipython>=9.4.0",
+    "pytest-django>=4.11.1",
+    "pytest>=8.4.1",
+    "pytest-mock>=3.14.0",
+    "httpx>=0.27.0",
+    "pytest-asyncio>=0.23.7",
+    "psycopg2-binary>=2.9.10",
+    "testcontainers[postgres]>=4.12.0",
+]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry.group.dev.dependencies]
-black = "^25.1.0"
-ruff = "^0.12.9"
-ipython = "^9.4.0"
-pytest-django = "^4.11.1"
-pytest = "^8.4.1"
-pytest-mock = "^3.14.0"
-httpx = "^0.27.0"
-pytest-asyncio = "^0.23.7"
-psycopg2-binary = "^2.9.10"
-testcontainers = {extras = ["postgres"], version = "^4.12.0"}
+[tool.uv]
+package = false
 
 [tool.black]
 target-version = ['py312']
 exclude = '''
-/(\
+/(
     \.git
     | \.mypy_cache
     | \.venv
+    | venv
+    | env
     | build
     | dist
+    | .*/(bin|lib|share|etc)
+    | .*/pyvenv\.cfg
 )/
 '''
 
@@ -47,15 +55,29 @@ testpaths = ["tests"]
 
 [tool.ruff]
 target-version = "py312"
-
 exclude = [
 	"__pycache__",
 	"migrations",
 	"db.sqlite3",
-	"*.pyc"
+	"*.pyc",
+	".venv",
+	"venv",
+	"env",
+	"*/bin/**",
+	"*/lib/**",
+	"*/share/**",
+	"*/etc/**",
+	"*/pyvenv.cfg"
 ]
 
 [tool.ruff.lint]
 select = ["E", "F", "I"]
 # E501 (line too long) is ignored
 ignore = ["E501"]
+
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
