feat: Enhance development and testing setup with environment variables and Docker improvements

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ TEST_PORT=8002
 
 # Django Configuration
 SECRET_KEY=your-secret-key-here-change-in-production
+DEBUG=True
+ALLOWED_HOSTS=localhost,127.0.0.1
+DJANGO_SETTINGS_MODULE=config.settings
 
 # Database settings
 POSTGRES_USER=polls_user
