feat: Enhance database configuration and testing setup with PostgreSQL support

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 SECRET_KEY=your-secret-key-here-change-in-production
 DJANGO_SETTINGS_MODULE=config.settings
+DATABASE_CONN_MAX_AGE=0
 
 # Database settings
 POSTGRES_USER=polls_user
