--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "django>=5.2.5,<6.0.0",
     "python-dotenv>=1.1.1,<2.0.0",
     "gunicorn>=22.0.0,<23.0.0",
+    "dj-database-url>=2.2.0,<3.0.0",
+    "psycopg2-binary>=2.9.10",
 ]
 
 [dependency-groups]
@@ -21,7 +23,6 @@ dev = [
     "pytest-mock>=3.14.0",
     "httpx>=0.27.0",
     "pytest-asyncio>=0.23.7",
-    "psycopg2-binary>=2.9.10",
     "testcontainers[postgres]>=4.12.0",
 ]
 
