feat: Update Docker and environment configurations for PostgreSQL support

--- a/docker-compose.dev.override.yml
+++ b/docker-compose.dev.override.yml
@@ -21,10 +21,11 @@ services:
       - /app/.venv
 
   nginx:
-    ports:
+    ports: !override
       - "${WEB_HOST}:${DEV_PORT}:80"
 
 volumes:
   postgres-db:
+    driver: local
     name: ${PROJECT_NAME}-postgres-db-dev
     external: false
