--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "python-dotenv>=1.1.1,<2.0.0",
     "gunicorn>=22.0.0,<23.0.0",
     "dj-database-url>=2.2.0,<3.0.0",
+    "psycopg2-binary>=2.9.10",
 ]
 
 [dependency-groups]
