refactor: Rename POSTGRES_IMAGE to POSTGRES_IMAGE_NAME and update related configurations

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ DJANGO_SETTINGS_MODULE=config.settings
 DATABASE_CONN_MAX_AGE=0
 
 # Database settings
-POSTGRES_IMAGE=postgres:16-alpine
+POSTGRES_IMAGE_NAME=postgres:16-alpine
 POSTGRES_USER=polls_user
 POSTGRES_PASSWORD=polls_password
 POSTGRES_HOST_DB_NAME=polls_site
