--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,16 @@
 services:
+  nginx:
+    build:
+      context: ./nginx
+    ports:
+      - "${WEB_HOST}:${HOST_PORT}:80"
+    volumes:
+      - static-volume:/app/static
+    depends_on:
+      web:
+        condition: service_healthy
+    restart: unless-stopped
+
   web:
     build:
       context: .
@@ -24,7 +36,7 @@ services:
       - "host.docker.internal:host-gateway"
 
   db:
-    image: ${POSTGRES_IMAGE}
+    image: ${POSTGRES_IMAGE_NAME}
     volumes:
       - postgres-db:/var/lib/postgresql/data
     environment:
@@ -37,18 +49,6 @@ services:
       timeout: 5s
       retries: 5
       start_period: 20s
-    restart: unless-stopped
-
-  nginx:
-    build:
-      context: ./nginx
-    ports:
-      - "${WEB_HOST}:${HOST_PORT}:80"
-    volumes:
-      - static-volume:/app/static
-    depends_on:
-      web:
-        condition: service_healthy
     restart: unless-stopped
 
 volumes:
