Add unit tests for user database operations
- Implemented a test case to verify user creation and retrieval from the database.
- Ensured that the test environment rolls back changes after each test to maintain database integrity.

--- a/docker-compose.dev.override.yml
+++ b/docker-compose.dev.override.yml
@@ -1,7 +1,7 @@
 services:
   nginx:
     ports: !override
-      - "${WEB_HOST}:${DEV_PORT}:80"
+      - "${HOST_BIND_IP}:${DEV_PORT}:80"
 
   web:
     build:
