--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 PROJECT_NAME=dj-site-tmpl
 
 # Web server settings
-WEB_HOST=127.0.0.1
+HOST_BIND_IP=127.0.0.1
 HOST_PORT=8000
 DEV_PORT=8001
 TEST_PORT=8002
@@ -16,9 +16,10 @@ DJANGO_SETTINGS_MODULE=config.settings
 DATABASE_CONN_MAX_AGE=0
 
 # Database settings
+USE_SQLITE=true
 POSTGRES_IMAGE_NAME=postgres:16-alpine
-POSTGRES_USER=polls_user
-POSTGRES_PASSWORD=polls_password
-POSTGRES_HOST_DB_NAME=polls_site
-POSTGRES_DEV_DB_NAME=polls_site_dev
-POSTGRES_TEST_DB_NAME=polls_site_test
+POSTGRES_USER=dj-site-user
+POSTGRES_PASSWORD=dj-site-password
+POSTGRES_HOST_DB_NAME=dj-site-template
+POSTGRES_DEV_DB_NAME=dj-site-template-dev
+POSTGRES_TEST_DB_NAME=dj-site-template-test
