refactor: Move checkout step to individual workflows for Docker and local tests

--- a/.github/workflows/run-docker-tests.yml
+++ b/.github/workflows/run-docker-tests.yml
@@ -11,6 +11,9 @@ jobs:
       matrix:
         test_target: [build-test, pstg-test, e2e-test]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - uses: ./.github/actions/setup-test-env
 
       - name: Run ${{ matrix.test_target }}
