--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "dj-site-tmpl"
-version = "0.1.0"
+name = "dj-site-template"
+version = "1.0.0"
 description = "A comprehensive Django project template."
 authors = [{ name = "akitorahayashi", email = "atora.has75@gmail.com" }]
 requires-python = ">=3.12,<4.0"
