refactor: Replace Makefile with Just commands and update workflows for consistency

--- a/.github/workflows/run-docker-tests.yml
+++ b/.github/workflows/run-docker-tests.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Run ${{ matrix.test_target }}
         env:
           SUDO: ${{ secrets.SUDO || 'true' }}
-        run: make ${{ matrix.test_target }}
+        run: just ${{ matrix.test_target }}
