--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,8 @@ USE_SQLITE=true
 POSTGRES_IMAGE_NAME=postgres:16-alpine
 POSTGRES_USER=dj-site-user
 POSTGRES_PASSWORD=dj-site-password
-POSTGRES_HOST_DB_NAME=dj-site-template
-POSTGRES_DEV_DB_NAME=dj-site-template-dev
-POSTGRES_TEST_DB_NAME=dj-site-template-test
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+POSTGRES_HOST_DB=dj-site-template
+POSTGRES_DEV_DB=dj-site-template-dev
+POSTGRES_TEST_DB=dj-site-template-test
