--- a/docker-compose.test.override.yml
+++ b/docker-compose.test.override.yml
@@ -10,15 +10,13 @@ services:
       - .env
     environment:
       - DEBUG=true
-      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_TEST_DB_NAME}
-      - POSTGRES_DB=${POSTGRES_TEST_DB_NAME}
+      - POSTGRES_DB=${POSTGRES_TEST_DB}
 
   db:
     environment:
-      - POSTGRES_DB=${POSTGRES_TEST_DB_NAME}
+      - POSTGRES_DB=${POSTGRES_TEST_DB}
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_TEST_DB_NAME}" ]
-
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_TEST_DB}" ]
 
 volumes:
   postgres-db:
