--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     environment:
       - DEBUG=false
       - USE_SQLITE=false
-      - POSTGRES_DB=${POSTGRES_HOST_DB_NAME}
+      - POSTGRES_DB=${POSTGRES_HOST_DB}
     healthcheck:
       test: [ "CMD-SHELL", "python -c \"import os,sys,urllib.request; url=f'http://localhost:8000{os.getenv('HEALTHCHECK_PATH','/health/')}'; r=urllib.request.urlopen(url, timeout=5); sys.exit(0 if getattr(r,'status',200)==200 else 1)\"" ]
       interval: 30s
@@ -44,9 +44,9 @@ services:
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_HOST_DB_NAME}
+      - POSTGRES_DB=${POSTGRES_HOST_DB}
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_HOST_DB_NAME}" ]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_HOST_DB}" ]
       interval: 10s
       timeout: 5s
       retries: 5
